<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bookreport.BookReportModifyFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/book_report_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="독후감 수정"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_article_image"
        android:layout_width="60dp"
        android:layout_height="87dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_report_app_bar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="2"
        android:text="TITLE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_article_image"
        app:layout_constraintTop_toTopOf="@id/iv_article_image" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="AUTHOR"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_book_report_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="하루 독후감 제목"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_article_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_book_report_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_report_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_book_report_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/hanna_air"
            android:hint="독후감 제목을 입력해주세요:)"
            android:inputType="textAutoComplete"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_book_report_contents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="하루 독후감 내용"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/iv_article_image"
        app:layout_constraintTop_toBottomOf="@+id/tl_book_report_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_book_report_contents"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_report_contents">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_book_report_contents"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fontFamily="@font/hanna_air"
            android:gravity="top"
            android:hint="책은 어떠셨나요?"
            android:maxLength="500" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_book_report"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/hanna_air"
        android:text="하루 독후감 수정"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
