<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/fragment_search"
        android:title="@string/search_menu"
        android:icon="@drawable/ic_search_24" />

    <item android:id="@+id/fragment_book_report"
        android:title="@string/book_report"
        android:icon="@drawable/ic_baseline_menu_book_24" />

    <item android:id="@+id/fragment_favorite"
        android:title="@string/favorite_menu"
        android:icon="@drawable/ic_favorite_24" />

    <item android:id="@+id/fragment_setting"
        android:title="@string/setting_menu"
        android:icon="@drawable/ic_settings_24" />
</menu>
